<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        style="@style/TitleText"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/nombrePersona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/form_field1"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/numeroPerritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/form_field2" />

    <TextView
        android:text="¿Te gustan los perritos?"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/formButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_button"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

</LinearLayout>