<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    tools:context=".SubscriptionFragment"
    android:paddingTop="10dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/subscribeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_secondary"
        android:text="@string/subscribe_button"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:inputType="textEmailAddress"
            android:hint="@string/correo_electronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/confirmButton"
        android:text="@string/confirm_subscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/button_primary"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/thankYouText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/check_secondarycolor"
        android:gravity="center_horizontal"
        android:text="  Gracias por suscribirte!"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:paddingTop="10dp"/>

</LinearLayout>